# ComfyUI-Pack-Of-ThatAIGod

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  Dynamic_Resolution_Picker.py  Image_Saver_Plus.py  LICENSE  LLM_Fallback_Node.py  LLM_Node.py  README.md  Resolution_Selector.py  Sequential_Image_Loader.py  Truncate_LLM_Thinking.py  Upscale_By_Max_Side.py  Wildcard_Reader.py  __init__.py  _utils.py  commitlint.config.js  llm_utils.py  mkdocs.yml  pyproject.toml  utils.py
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: python-package.yml  secret-scan.yml
comfyui_pack_of_thataigod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: index.md
docs/api/: Dynamic_Resolution_Picker.md  Image_Saver_Plus.md  LLM_Fallback_Node.md  LLM_Node.md  Resolution_Selector.md  Sequential_Image_Loader.md  Truncate_LLM_Thinking.md  Upscale_By_Max_Side.md  Wildcard_Reader.md  __init__.md  _utils.md  llm_utils.md
js/: dynamic_display.js  resolution_selector.js
tests/: test___init__.py  test_dynamic_resolution_picker.py  test_image_saver_plus.py  test_llm_fallback_node.py  test_llm_node.py  test_llm_utils.py  test_resolution_selector.py  test_sequential_image_loader.py  test_truncate_llm_thinking.py  test_upscale_by_max_side.py  test_utils.py  test_wildcard_reader.py
wildcards/: README.md  colors.bat  find.bat  wildcard_generator.bat
wildcards/autowildcards/: all_colors_female.txt  all_colors_male.txt  bright_colors_female.txt  bright_colors_male.txt  earthtone_colors_female.txt  earthtone_colors_male.txt  female_athletic_outfit.txt  female_casual_outfit.txt  female_costume_outfit.txt  female_formal_outfit.txt  female_lingerie_outfit.txt  female_outfit_category.txt  female_scene.txt  female_swimwear_outfit.txt  female_traditional_outfit.txt  jeweltone_colors_female.txt  jeweltone_colors_male.txt  male_athletic_outfit.txt  male_casual_outfit.txt  male_costume_outfit.txt  male_formal_outfit.txt  male_outfit_category.txt  male_scene.txt  male_traditional_outfit.txt  metallic_colors_female.txt  metallic_colors_male.txt  muted_colors_female.txt  muted_colors_male.txt  neon_colors_female.txt  neon_colors_male.txt  neutral_colors_female.txt  neutral_colors_male.txt  pastel_colors_female.txt  pastel_colors_male.txt  subject_female.txt  subject_male.txt
