[project]
name = "comfyui-pack-of-thataigod"
version = "1.1.0"
description = "Custom node pack for ComfyUI with LLM integration, image utilities, and wildcard prompt generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "thataigod", email = "thataigod@gmail.com" },
]
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.21",
    "torch>=2.0.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]
